--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/balloon.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/vendor/leaflet.min.css">
   </head>
   <body>
