Add Google Analytics code

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -44,12 +44,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXX-XX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63691338-7"></script>
     <script src="/vendor/ledger.js"></script>
 
     <script>
       window.dataLayer = window.dataLayer || []
-      window.GA_TRACKING_ID = 'UA-XXX-XX'
+      window.GA_TRACKING_ID = 'UA-63691338-7'
 
       function gtag(){
         window.dataLayer.push(arguments)
