--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,21 +20,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Decentraland - Marketplace</title>
+  <title>Decentraland - Land Manager</title>
 
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/balloon.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/vendor/leaflet.min.css">
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor/bootstrap.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor/balloon.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor/leaflet.min.css">
+</head>
 
-    <div id="app"></div>
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
 
-    <!--
+  <div id="app"></div>
+
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -43,18 +45,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63691338-7"></script>
-    <script src="/vendor/ledger.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-63691338-7"></script>
+  <script src="/vendor/ledger.js"></script>
 
-    <script>
-      window.dataLayer = window.dataLayer || []
-      window.GA_TRACKING_ID = 'UA-63691338-7'
+  <script>
+    window.dataLayer = window.dataLayer || []
+    window.GA_TRACKING_ID = 'UA-63691338-7'
 
-      function gtag(){
-        window.dataLayer.push(arguments)
-      }
-    </script>
+    function gtag() {
+      window.dataLayer.push(arguments)
+    }
+  </script>
 
-  </body>
+</body>
+
 </html>
