--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Decentraland - LAND Manager</title>
+  <title>Decentraland - LAND Marketplace</title>
 
   <link rel="stylesheet" href="%PUBLIC_URL%/vendor/fonts.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/vendor/balloon.min.css">
