chore: add chinese translation

--- a/scripts/maintenance/index.html
+++ b/scripts/maintenance/index.html
@@ -248,7 +248,7 @@
       margin-top: 50px;
     }
 
-    .SignInPage .sign-in-options {
+    .SignInPage .sub {
       color: var(--gray);
     }
 
@@ -480,8 +480,18 @@
         <div class="content">
           <div class="message">
             <i class="Icon Icon-decentraland"></i>
-            <h1>Under site maintenance</h1>
-            <p class="sign-in-options">We'll be right back! :)</p>
+            <h1>
+              Under site maintenance
+              <br/>
+              在网站维护
+            </h1>
+            <p class="sub">
+              We'll be right back!
+              <br/>
+              我们马上回来！
+              <br/>
+              :)
+            </p>
 <!--             <a href="/">
               <button type="button" class="ui primary button" role="button">Refresh</button>
             </a>
