fix: maintenance page style

--- a/scripts/maintenance/index.html
+++ b/scripts/maintenance/index.html
@@ -13,10 +13,13 @@
 
       --text: #ffffff;
       --background: #1f2333;
+      --dark-background: #0d0f17;
+      --error: #ffb208;
 
       --light-gray: #ededed;
       --gray: #8f9199;
       --dark-gray: #2e3447;
+      --darker-gray: #181b26;
 
       --light-green: #d1eee6;
       --green: #30d7a9;
@@ -39,7 +42,10 @@
       --navbar-height: 94px;
       --footer-height: 80px;
 
-      --font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      --font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, 'Helvetica Neue', Arial, sans-serif;
+
+      --gradient: linear-gradient(var(--background), var(--dark-background));
     }
 
     * {
