--- a/scripts/maintenance/index.html
+++ b/scripts/maintenance/index.html
@@ -495,7 +495,7 @@
           <div class="message">
             <i class="Icon Icon-decentraland"></i>
             <h1>
-              Under site maintenance
+              Site under maintenance
               <br/> 在网站维护
             </h1>
             <p class="sub">
