feat: add support for multiple tokens

--- a/scripts/maintenance/index.html
+++ b/scripts/maintenance/index.html
@@ -8,7 +8,7 @@
   <title>Decentraland - LAND Marketplace</title>
   <style type="text/css">
     :root {
-      --primary: #ff4130;
+      --primary: #ff0044;
       --secondary: #00dbef;
 
       --text: #ffffff;
@@ -18,7 +18,7 @@
 
       --light-gray: #ededed;
       --gray: #8f9199;
-      --dark-gray: #2e3447;
+      --dark-gray: #2a3246;
       --darker-gray: #181b26;
 
       --light-green: #d1eee6;
@@ -26,7 +26,7 @@
       --dark-green: #2e7d32;
 
       --light-red: #ff9990;
-      --red: #ff4130;
+      --red: #ff0044;
       --dark-red: #9f1a10;
 
       --yellow: #f2be24;
