feat: added authorization/confirmation step

--- a/scripts/maintenance/index.html
+++ b/scripts/maintenance/index.html
@@ -9,7 +9,7 @@
   <style type="text/css">
     :root {
       --primary: #ff0044;
-      --secondary: #00dbef;
+      --secondary: #00d3ff;
 
       --text: #ffffff;
       --background: #1f2333;
@@ -33,7 +33,7 @@
 
       --orange: #ef6c00;
 
-      --light-blue: #00dbef;
+      --light-blue: #00d3ff;
       --blue: #1976d2;
 
       --purple: #3e396b;
